# tieba-sign

./: README.md  env.py  pyproject.toml  requirements.txt  tieba-sign.py  tieba-sign.sh
src/tieba_sign/: __init__.py  __main__.py  config.py  error_handling.py  paths.py  tieba.py
