[project]
name = "tieba-sign"
version = "0.3.0"
description = "签到你的所有关注贴吧"
readme = "README.md"
authors = [
    { name = "Alec", email = "alecvbnm@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
tieba-sign = "tieba_sign:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "viztracer>=1.0.3",
]
